<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10sp"
    app:cardElevation="8sp"
    app:cardMaxElevation="5sp"
    android:layout_margin="10sp">

    <LinearLayout
        android:id="@+id/idLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idAdpTituloTarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/txt_item_tarefa"
                android:textColor="@color/black"
                android:textSize="@dimen/dm_titulo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idAdpDataHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dm_normal"
                tools:text="@string/txt_data_hora" />
        </LinearLayout>

        <ImageView
            android:id="@+id/idAdpImage"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_more_vert_24" />
    </LinearLayout>
</androidx.cardview.widget.CardView>