<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/idToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_voltar_24"
        app:title="@string/titulo_criar_tarefa" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/idGuideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dm_layout_guideline" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/idGuideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTitulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_titulo"
        android:layout_marginTop="@dimen/dm_layout_margen_top"
        app:layout_constraintEnd_toEndOf="@id/idGuideEnd"
        app:layout_constraintStart_toStartOf="@id/idGuideStart"
        app:layout_constraintTop_toBottomOf="@id/idToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idData"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dm_layout_margen_end"
        android:hint="@string/txt_data"
        app:layout_constraintEnd_toStartOf="@id/idHora"
        app:layout_constraintStart_toStartOf="@id/idGuideStart"
        app:layout_constraintTop_toBottomOf="@id/idTitulo"
        app:startIconDrawable="@drawable/ic_calendar_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idHora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_horario"
        app:layout_constraintEnd_toEndOf="@id/idGuideEnd"
        app:layout_constraintStart_toEndOf="@+id/idData"
        app:layout_constraintTop_toTopOf="@+id/idData"
        app:startIconDrawable="@drawable/ic_timer_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="@id/idGuideEnd"
        app:layout_constraintStart_toStartOf="@id/idGuideStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/titulo_criar_tarefa"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/idGuideEnd"
        app:layout_constraintStart_toStartOf="@id/idGuideStart" />

</androidx.constraintlayout.widget.ConstraintLayout>